--- a/dashboard/src/index.css
+++ b/dashboard/src/index.css
@@ -842,5 +842,28 @@ hr {
   background-color: rgb(212, 212, 212);
 }
 
+/* .auth-container {
+  width: 300px;
+  margin: 100px auto;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  text-align: center;
+}
+
+.auth-container input {
+  width: 90%;
+  padding: 10px;
+  margin: 10px 0;
+}
+
+.auth-container button {
+  padding: 10px 20px;
+  background: #4184f3;
+  color: white;
+  border: none;
+  border-radius: 4px;
+}
 
 
+ */
